--- a/package.json
+++ b/package.json
@@ -28,8 +28,10 @@
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.5.1",
     "@ionic/storage-angular": "^4.0.0",
+    "animate.css": "^4.1.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
   },
